Change output path and try to route to lighter html

--- a/AppBuilderAlone/wwwroot/output.html
+++ b/AppBuilderAlone/wwwroot/output.html
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#870000">
-    <title>App Builder</title>
+    <title>App Output</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
@@ -13,19 +12,14 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icons/folder_share-512.png" />
     <link rel="icon" sizes="512x512" href="icons/folder_share-512.png" />
-    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
-    <link href="routes.json" />
-    <link href="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.css" rel="stylesheet" />
-    <link href="_content/LiquidTechnologies.Blazor.ModalDialog/liquid-modal-dialog.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" integrity="sha512-f8mUMCRNrJxPBDzPJx3n+Y5TC5xp6SmStstEfgsDXZJTcxBakoB5hvPLhAfJKa9rCvH+n3xpJ2vQByxLk4WP2g==" crossorigin="anonymous" />
 
+    <link href="routes.json" />
 </head>
 
 <body>
     <div id="app">
-        <div class="loader">
-            <p>App Builder</p>
-            <p>Loading...</p>
+        <div class="text-center">
+            <h2 class="text-center">Your app is loading...</h2>
         </div>
     </div>
 
@@ -35,10 +29,6 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
-    <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
-    <script>require.config({ paths: { 'vs': '_content/BlazorMonaco/lib/monaco-editor/min/vs' } });</script>
-    <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
     <script src="_content/BlazorMonaco/jsInterop.js"></script>
     <script src="_content/LiquidTechnologies.Blazor.ModalDialog/liquid-modal-dialog.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
