Code cleanup and accesibilty/seo quick fixes

--- a/AppBuilderAlone/wwwroot/index.html
+++ b/AppBuilderAlone/wwwroot/index.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000">
+    <meta name="Description" content="Build Blazor SPAs with razor components and C# classes online or off">
     <title>App Builder</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
