--- a/AppBuilderAlone/wwwroot/index.html
+++ b/AppBuilderAlone/wwwroot/index.html
@@ -11,8 +11,8 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="AppBuilderAlone.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icons/folder_share-512.png" />
-    <link rel="icon" sizes="512x512" href="icons/folder_share-512.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icons/appbuilder-icon-512.png" />
+    <link rel="icon" sizes="512x512" href="icons/appbuilder-icon-512.png" />
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link href="routes.json" />
     <link href="_content/BlazorMonaco/lib/monaco-editor/min/vs/editor/editor.main.css" rel="stylesheet" />
